--- a/css/app/textarea.css
+++ b/css/app/textarea.css
@@ -85,7 +85,7 @@
     background-color: white;
     border: 2px solid black;
     border-bottom: none;
-    border-radius: 10px 10px 0 0;
+    border-radius: 5px 5px 0 0;
     z-index: 2;
     padding: 20px 80px 50px 80px;
     margin-bottom: 100px;
